Changed all references of '.btn-fav-close' to '.btn-close' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/beginner/favourites.html
+++ b/BeginnersPad v2/beginner/favourites.html
@@ -116,7 +116,7 @@
                             <p class="timestamp">Added 5 hours ago</p>
                         </div>
                     </a>
-                    <button class="btn-link btn-fav-close"><i class="fas fa-times"></i></button>
+                    <button class="btn-link btn-close"><i class="fas fa-times"></i></button>
                 </div>
                 <div class="fav unit">
                     <a href="/view-listing-unit.html">
@@ -139,7 +139,7 @@
                             <p class="timestamp">Added 5 hours ago</p>
                         </div>
                     </a>
-                    <button class="btn-link btn-fav-close"><i class="fas fa-times"></i></button>
+                    <button class="btn-link btn-close"><i class="fas fa-times"></i></button>
                 </div>
                 <div class="fav listing">
                     <a href="/view-listing.html">
@@ -164,7 +164,7 @@
                             </div>
                         </div>
                     </a>
-                    <button class="btn-link btn-fav-close"><i class="fas fa-times"></i></button>
+                    <button class="btn-link btn-close"><i class="fas fa-times"></i></button>
                 </div>
                 <div class="fav unit">
                     <a href="/view-listing-unit.html">
@@ -187,7 +187,7 @@
                             <p class="timestamp">Added 5 hours ago</p>
                         </div>
                     </a>
-                    <button class="btn-link btn-fav-close"><i class="fas fa-times"></i></button>
+                    <button class="btn-link btn-close"><i class="fas fa-times"></i></button>
                 </div>
                 <div class="fav listing">
                     <a href="/view-listing.html">
@@ -212,7 +212,7 @@
                             </div>
                         </div>
                     </a>
-                    <button class="btn-link btn-fav-close"><i class="fas fa-times"></i></button>
+                    <button class="btn-link btn-close"><i class="fas fa-times"></i></button>
                 </div>
                 <div class="fav topic">
                     <a href="../view-topic.html">
@@ -225,7 +225,7 @@
                         asperiores quo rerum, quisquam rem facere quos voluptas consequuntur unde ipsum exercitationem ad! Ab delectus
                         voluptates fuga amet quia blanditiis numquam. Dolores fugit atque at!</p>
                     </a>
-                    <button class="btn-link btn-fav-close"><i class="fas fa-times"></i></button>
+                    <button class="btn-link btn-close"><i class="fas fa-times"></i></button>
                 </div>
                 <div class="fav topic">
                     <a href="../view-topic.html">
@@ -238,7 +238,7 @@
                         asperiores quo rerum, quisquam rem facere quos voluptas consequuntur unde ipsum exercitationem ad! Ab delectus
                         voluptates fuga amet quia blanditiis numquam. Dolores fugit atque at!</p>
                     </a>
-                    <button class="btn-link btn-fav-close"><i class="fas fa-times"></i></button>
+                    <button class="btn-link btn-close"><i class="fas fa-times"></i></button>
                 </div>
                 <div class="fav unit">
                     <a href="/view-listing-unit.html">
@@ -261,7 +261,7 @@
                             <p class="timestamp">Added 5 hours ago</p>
                         </div>
                     </a>
-                    <button class="btn-link btn-fav-close"><i class="fas fa-times"></i></button>
+                    <button class="btn-link btn-close"><i class="fas fa-times"></i></button>
                 </div>
                 <div class="fav unit">
                     <a href="/view-listing-unit.html">
@@ -284,7 +284,7 @@
                             <p class="timestamp">Added 5 hours ago</p>
                         </div>
                     </a>
-                    <button class="btn-link btn-fav-close"><i class="fas fa-times"></i></button>
+                    <button class="btn-link btn-close"><i class="fas fa-times"></i></button>
                 </div>
                 <div class="fav listing">
                     <a href="/view-listing.html">
@@ -309,7 +309,7 @@
                             </div>
                         </div>
                     </a>
-                    <button class="btn-link btn-fav-close"><i class="fas fa-times"></i></button>
+                    <button class="btn-link btn-close"><i class="fas fa-times"></i></button>
                 </div>
                 <div class="fav unit">
                     <a href="/view-listing-unit.html">
@@ -332,7 +332,7 @@
                             <p class="timestamp">Added 5 hours ago</p>
                         </div>
                     </a>
-                    <button class="btn-link btn-fav-close"><i class="fas fa-times"></i></button>
+                    <button class="btn-link btn-close"><i class="fas fa-times"></i></button>
                 </div>
                 <div class="fav listing">
                     <a href="/view-listing.html">
@@ -357,7 +357,7 @@
                             </div>
                         </div>
                     </a>
-                    <button class="btn-link btn-fav-close"><i class="fas fa-times"></i></button>
+                    <button class="btn-link btn-close"><i class="fas fa-times"></i></button>
                 </div>
                 <div class="fav topic">
                     <a href="../view-topic.html">
@@ -370,7 +370,7 @@
                         asperiores quo rerum, quisquam rem facere quos voluptas consequuntur unde ipsum exercitationem ad! Ab delectus
                         voluptates fuga amet quia blanditiis numquam. Dolores fugit atque at!</p>
                     </a>
-                    <button class="btn-link btn-fav-close"><i class="fas fa-times"></i></button>
+                    <button class="btn-link btn-close"><i class="fas fa-times"></i></button>
                 </div>
                 <div class="fav topic">
                     <a href="../view-topic.html">
@@ -383,7 +383,7 @@
                         asperiores quo rerum, quisquam rem facere quos voluptas consequuntur unde ipsum exercitationem ad! Ab delectus
                         voluptates fuga amet quia blanditiis numquam. Dolores fugit atque at!</p>
                     </a>
-                    <button class="btn-link btn-fav-close"><i class="fas fa-times"></i></button>
+                    <button class="btn-link btn-close"><i class="fas fa-times"></i></button>
                 </div>
             </div>
         </div>
