Added 'popup.js' to 'Beginners Pad v2'.

--- a/BeginnersPad v2/lister/manage-listing.html
+++ b/BeginnersPad v2/lister/manage-listing.html
@@ -323,6 +323,14 @@
             </div>
         </div>
     </section>
+
+    <!-- Modals -->
+    <div class="popup popup-md" id="popupDemo">
+        <div class="popup-wrapper">
+            <h3>Modal demo</h3>
+            <button class="btn-link btn-popup-close"><i class="fas fa-times"></i></button>
+        </div>
+    </div>
     
     <script async
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjtXueHrMV4qUXj0tdwD0dvCqxgM3mKds&callback=initMap">
