Made changes to action buttons in '/lister/manage-listing.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/lister/manage-listing.html
+++ b/BeginnersPad v2/lister/manage-listing.html
@@ -319,10 +319,10 @@
                         <h3>Location</h3>
                         <div id="map"></div>
                     </div>
-                    <div class="tickets-categories-user">
+                    <div class="listing-actions">
                         <h3>Actions</h3>
                         <div class="btn-grp vertical">
-                            <button class="selected">Submit for approval</button>
+                            <button>Submit for approval</button>
                             <button>Withdraw submission</button>
                             <button>Hide from public</button>
                             <button>Request removal from system</button>
