Temporarily removed references to 'popup.js' and restored 'nav-drawer.js' original functionality in 'Beginners Pad v2'.

--- a/BeginnersPad v2/lister/manage-listing-unit.html
+++ b/BeginnersPad v2/lister/manage-listing-unit.html
@@ -49,7 +49,7 @@
         <div class="nav-drawer-category">
             <p>Menu</p>
             <ul>
-                <li class="selected"><a href="/lister/dashboard.html">Dashboard</a></li>
+                <li><a href="/lister/dashboard.html">Dashboard</a></li>
                 <li><a href="/view-listings.html">Listings</a></li>
                 <li><a href="/lister/my-listings.html">My listings</a></li>
                 <li><a href="/lister/favourites.html">Favourites</a></li>
@@ -228,12 +228,9 @@
         </div>
     </div>
     
-    <script async
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjtXueHrMV4qUXj0tdwD0dvCqxgM3mKds&callback=initMap">
-    </script>
     <script src="/js/maps-view-listing.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.4.1/chart.js"></script>
-    <script src="/js/popup.js"></script>
+    <!-- <script src="/js/popup.js"></script> -->
     <script src="/js/nav-drawer.js"></script>
     <script src="/js/css-base.js"></script>
 </body>
