Added '/lister/view-my-listing.html' to 'Beginners Pad v2'.

--- a/BeginnersPad v2/lister/manage-listing.html
+++ b/BeginnersPad v2/lister/manage-listing.html
@@ -147,7 +147,9 @@
                         <div class="title-grp">
                             <h3>Units available</h3>
                             <div class="info-actions">
-                                <i class="fas fa-plus"></i>
+                                <a href="/lister/manage-listing-unit.html">
+                                    <i class="fas fa-plus"></i>
+                                </a>
                             </div>
                         </div>
                         <div class="listing-units-grp">
