Added '.listing-actions' to '/lister/view-my-listing.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/lister/view-my-listing.html
+++ b/BeginnersPad v2/lister/view-my-listing.html
@@ -276,6 +276,16 @@
                             </div>
                         </div>
                     </div>
+                    <div class="listing-actions">
+                        <h3>Actions</h3>
+                        <div class="btn-grp vertical">
+                            <button>Make private (hide)</button>
+                            <button>Submit for approval</button>
+                            <button>Withdraw submission</button>
+                            <button>Edit listing</button>
+                            <button>Request removal</button>
+                        </div>
+                    </div>
                 </div>
                 <div class="panel">
                     <div class="listing-features" id="listing-features">
