Added '#listing-other-actions' to '/lister/view-my-listing.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/lister/view-my-listing.html
+++ b/BeginnersPad v2/lister/view-my-listing.html
@@ -132,7 +132,14 @@
             <div class="panel-grp">
                 <div class="panel">
                     <div class="listing-units-list" id="units-available">
-                        <h3>Units available</h3>
+                        <div class="title-grp">
+                            <h3>Units available</h3>
+                            <div class="info-actions">
+                                <a href="/lister/manage-listing-unit.html">
+                                    <i class="fas fa-plus"></i>
+                                </a>
+                            </div>
+                        </div>
                         <div class="listing-units-grp">
                             <div class="card-sm card-unit">
                                 <a href="/view-listing-unit.html">
@@ -276,14 +283,23 @@
                             </div>
                         </div>
                     </div>
-                    <div class="listing-actions">
-                        <h3>Actions</h3>
+                    <div class="listing-actions" id="listing-actions">
+                        <h3>Listing actions</h3>
                         <div class="btn-grp vertical">
                             <button>Make private (hide)</button>
                             <button>Submit for approval</button>
                             <button>Withdraw submission</button>
                             <button>Edit listing</button>
-                            <button>Request removal</button>
+                            <button>Add unit</button>
+                            <button>Delete</button>
+                        </div>
+                    </div>
+                    <div class="listing-actions" id="listing-other-actions">
+                        <h3>Other actions</h3>
+                        <div class="btn-grp vertical">
+                            <button>Beginner applications</button>
+                            <button>Occupation log</button>
+                            <button>Management log</button>
                         </div>
                     </div>
                 </div>
