Added '.secondary-nav' to '/lister/view-my-listing.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/lister/view-my-listing.html
+++ b/BeginnersPad v2/lister/view-my-listing.html
@@ -59,6 +59,20 @@
         </div>
     </div>
 
+    <div class="secondary-nav">
+        <ul>
+            <li><a href="#section-showcase">Basic</a></li>
+            <li><a href="#units-available">Units</a></li>
+            <li><a href="#lister-details">Lister</a></li>
+            <li><a href="#listing-actions">Actions</a></li>
+            <li><a href="#listing-stats">Stats</a></li>
+            <li><a href="#listing-features">Features</a></li>
+            <li><a href="#map-view">Map</a></li>
+            <li><a href="#nearby-places">Places</a></li>
+            <li><a href="#listing-reviews">Reviews</a></li>
+        </ul>
+    </div>
+
     <!-- Showcase -->
     <section class="showcase-listing" id="section-showcase">
         <div class="showcase-listing-img-group">
@@ -411,7 +425,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="listing-reviews" id="reviews">
+                    <div class="listing-reviews" id="listing-reviews">
                         <h3>Reviews</h3>
                         <div class="reviews-list">
                             <div class="review-item">
