--- a/BeginnersPad v2/lister/view-my-listing.html
+++ b/BeginnersPad v2/lister/view-my-listing.html
@@ -318,15 +318,17 @@
                     </div>
                     <div class="listing-stats" id="listing-stats">
                         <h3>Stats</h3>
-                        <div class="listing-item-bordered">
-                            <p>Date added: <span id="statsListingTimestamp">01-Jan-2021 00:00:00</span></p>
-                            <p>Views: <span id="statsListingViews">0</span></p>
-                            <p>Times favourited: <span id="statsListingFavourites">0</span></p>
-                            <p>Times suspended: <span id="statsListingSuspended">0</span></p>
-                            <p>Units count: <span id="statsUnitCount">0</span></p>
-                            <p>Units occupied: <span id="statsUnitOccupied"></span>0</p>
-                            <p>Units unoccupied: <span id="statsUnitUnoccupied">0</span></p>
-                            <p>Units hidden: <span id="statsUnitHidden">0</span></p>
+                        <div class="listing-grp-bordered">
+                            <ul>
+                                <li>Date added: <span id="statsListingTimestamp">01-Jan-2021 00:00:00</span></li>
+                                <li>Views: <span id="statsListingViews">0</span></li>
+                                <li>Times favourited: <span id="statsListingFavourites">0</span></li>
+                                <li>Times suspended: <span id="statsListingSuspended">0</span></li>
+                                <li>Units count: <span id="statsUnitCount">0</span></li>
+                                <li>Units occupied: <span id="statsUnitOccupied">0</span></li>
+                                <li>Units unoccupied: <span id="statsUnitUnoccupied">0</span></li>
+                                <li>Units hidden: <span id="statsUnitHidden">0</span></li>
+                            </ul>
                         </div>
                     </div>
                     <div class="charts">
