Changed the location of '.secondary-nav' in '/lister/view-my-listing.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/lister/view-my-listing.html
+++ b/BeginnersPad v2/lister/view-my-listing.html
@@ -59,20 +59,6 @@
         </div>
     </div>
 
-    <div class="secondary-nav">
-        <ul>
-            <li><a href="#section-showcase">Basic</a></li>
-            <li><a href="#units-available">Units</a></li>
-            <li><a href="#lister-details">Lister</a></li>
-            <li><a href="#listing-actions">Actions</a></li>
-            <li><a href="#listing-stats">Stats</a></li>
-            <li><a href="#listing-features">Features</a></li>
-            <li><a href="#map-view">Map</a></li>
-            <li><a href="#nearby-places">Places</a></li>
-            <li><a href="#listing-reviews">Reviews</a></li>
-        </ul>
-    </div>
-
     <!-- Showcase -->
     <section class="showcase-listing" id="section-showcase">
         <div class="showcase-listing-img-group">
@@ -90,6 +76,21 @@
             <span>View images</span>
         </div>
     </section>
+
+    <!-- Nav -->
+    <div class="secondary-nav">
+        <ul>
+            <li><a href="#section-showcase">Basic</a></li>
+            <li><a href="#units-available">Units</a></li>
+            <li><a href="#lister-details">Lister</a></li>
+            <li><a href="#listing-actions">Actions</a></li>
+            <li><a href="#listing-stats">Stats</a></li>
+            <li><a href="#listing-features">Features</a></li>
+            <li><a href="#map-view">Map</a></li>
+            <li><a href="#nearby-places">Places</a></li>
+            <li><a href="#listing-reviews">Reviews</a></li>
+        </ul>
+    </div>
 
     <section class="section-listing-primary">
         <div class="container">
