Added 'tour requests' button to '/lister/view-my-listing.html' and '/listing/view-my-listing-unit.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/lister/view-my-listing-unit.html
+++ b/BeginnersPad v2/lister/view-my-listing-unit.html
@@ -131,6 +131,7 @@
                         <h3>Other actions</h3>
                         <div class="btn-grp vertical">
                             <button>Beginner applications</button>
+                            <button>Tour requests</button>
                             <button>Occupation log</button>
                             <button>Management log</button>
                         </div>
