Added 'banned users' button to '/lister/view-my-listing.html' and '/listing/view-my-listing-unit.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/lister/view-my-listing-unit.html
+++ b/BeginnersPad v2/lister/view-my-listing-unit.html
@@ -134,6 +134,7 @@
                             <button>Tour requests</button>
                             <button>Occupation log</button>
                             <button>Management log</button>
+                            <button>Banned users</button>
                         </div>
                     </div>
                     <div class="listing-stats" id="listing-stats">
