--- a/BeginnersPad v2/lister/view-my-listing.html
+++ b/BeginnersPad v2/lister/view-my-listing.html
@@ -316,6 +316,7 @@
                             <button>Tour requests</button>
                             <button>Occupation log</button>
                             <button>Management log</button>
+                            <button>Banned users</button>
                         </div>
                     </div>
                     <div class="listing-stats" id="listing-stats">
