--- a/BeginnersPad v2/lister/dashboard.html
+++ b/BeginnersPad v2/lister/dashboard.html
@@ -64,12 +64,13 @@
         <!-- Dashboard navbar -->
         <div class="dash-nav">
             <ul>
-                <li><a href="#dashProfile">Profile</a></li>
-                <li><a href="#dashListings">Listings</a></li>
-                <li><a href="#dashTickets">Tickets</a></li>
-                <li><a href="#dashReviews">Reviews</a></li>
-                <li><a href="#dashFavourites">Favourites</a></li>
-                <li><a href="#dashWaitingList">Waiting list</a></li>
+                <li><a href="/lister/dashboard.html">Dashboard</a></li>
+                <li><a href="/view-listings.html">Listings</a></li>
+                <li><a href="/lister/my-listings.html">My listings</a></li>
+                <li><a href="/lister/favourites.html">Favourites</a></li>
+                <li><a href="/lister/beginner-applications.html">Beginner applications</a></li>
+                <li><a href="/lister/property-applications.html">My listing applications</a></li>
+                <li><a href="/view-tickets-user.html">My tickets</a></li>
             </ul>
         </div>
 
