--- a/BeginnersPad v2/lister/dashboard.html
+++ b/BeginnersPad v2/lister/dashboard.html
@@ -56,6 +56,7 @@
                 <li><a href="/lister/beginner-applications.html">Beginner applications</a></li>
                 <li><a href="/lister/property-applications.html">My listing applications</a></li>
                 <li><a href="/view-tickets-user.html">My tickets</a></li>
+                <li><a href="/banned-users.html.html">Banned users</a></li>
             </ul>
         </div>
     </div>
@@ -64,13 +65,12 @@
         <!-- Dashboard navbar -->
         <div class="dash-nav">
             <ul>
-                <li><a href="/lister/dashboard.html">Dashboard</a></li>
-                <li><a href="/view-listings.html">Listings</a></li>
-                <li><a href="/lister/my-listings.html">My listings</a></li>
-                <li><a href="/lister/favourites.html">Favourites</a></li>
-                <li><a href="/lister/beginner-applications.html">Beginner applications</a></li>
-                <li><a href="/lister/property-applications.html">My listing applications</a></li>
-                <li><a href="/view-tickets-user.html">My tickets</a></li>
+                <li><a href="#dashProfile">Profile</a></li>
+                <li><a href="#dashListings">Listings</a></li>
+                <li><a href="#dashTickets">Tickets</a></li>
+                <li><a href="#dashReviews">Reviews</a></li>
+                <li><a href="#dashFavourites">Favourites</a></li>
+                <li><a href="#dashWaitingList">Waiting list</a></li>
             </ul>
         </div>
 
