Changed 'share your account' instances to 'share your profile' in '/*/dashboard.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/beginner/dashboard.html
+++ b/BeginnersPad v2/beginner/dashboard.html
@@ -97,7 +97,7 @@
                             <div>
                                 <a class="edit" href="#">Edit basic info <i class="fas fa-chevron-right"></i></a>
                             </div>
-                            <button class="btn-link share">Share your account <i class="fas fa-share-alt"></i></button>
+                            <button class="btn-link share">Share your profile <i class="fas fa-share-alt"></i></button>
                         </div>
                     </div>
             </div>
