--- a/BeginnersPad v2/lister/view-my-listing-unit.html
+++ b/BeginnersPad v2/lister/view-my-listing-unit.html
@@ -56,7 +56,7 @@
                 <li><a href="/lister/beginner-applications.html">Beginner applications</a></li>
                 <li><a href="/lister/property-applications.html">My listing applications</a></li>
                 <li><a href="/view-tickets-user.html">My tickets</a></li>
-                <li><a href="/banned-users.html.html">Banned users</a></li>
+                <li><a href="/lister/banned-users.html.html">Banned users</a></li>
             </ul>
         </div>
     </div>
