Added HTML markup to '/lister/view-beginner-applications.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/lister/view-beginner-applications.html
+++ b/BeginnersPad v2/lister/view-beginner-applications.html
@@ -63,15 +63,14 @@
 
     <section class="section-read links" id="tickets-user-list">
         <div class="container">
-            <h3 class="section-title">Tickets</h3>
+            <h3 class="section-title">Beginner applications</h3>
             <div class="panel-grp">
                 <div class="panel">
                     <div class="list">
                         <div class="item item-bottom-border">
                             <h4>Application 0#</h4>
-                            <h3></h3>
-                            <h5>Submitted on 01-01-2021 00:00:00</h5>
-                            <h4>by <a href="#">someuser</a></h4>
+                            <h5>Listing: <a href="/lister/view-my-listing.html">Listing</a>, <a href="/lister/view-my-listing-unit.html">Unit</a></h5>
+                            <h5>Submitted on 01-01-2021 00:00:00 by <a href="#">someuser</a></h5>
                             <h5>Beginner's note</h5>
                             <p class="text-main">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non ipsam impedit ut, harum dicta molestiae laudantium et
                             totam doloribus molestias cum ducimus fuga. Sunt natus, iste consequuntur eaque officiis ad omnis voluptatem quasi,
@@ -80,7 +79,37 @@
                             debitis architecto autem unde, eaque enim fugit deleniti. Nobis repellendus aliquid perspiciatis, dolorum facilis earum
                             asperiores quo rerum, quisquam rem facere quos voluptas consequuntur unde ipsum exercitationem ad! Ab delectus
                             voluptates fuga amet quia blanditiis numquam. Dolores fugit atque at!</p>
-                            <a href="/view-beginner-application.html">View ticket <i class="fas fa-chevron-right"></i></a>
+                            <a href="/lister/view-beginner-application.html">View application <i class="fas fa-chevron-right"></i></a>
+                        </div>
+                        <div class="item item-bottom-border">
+                            <h4>Application 0#</h4>
+                            <h5>Listing: <a href="/lister/view-my-listing.html">Listing</a>, <a href="/lister/view-my-listing-unit.html">Unit</a></h5>
+                            <h5>Submitted on 01-01-2021 00:00:00 by <a href="#">someuser2</a></h5>
+                            <h5>Beginner's note</h5>
+                            <p class="text-main">n/a</p>
+                            <a href="/lister/view-beginner-application.html">View application <i class="fas fa-chevron-right"></i></a>
+                        </div>
+                        <div class="item item-bottom-border">
+                            <h4>Application 0#</h4>
+                            <h5>Listing: <a href="/lister/view-my-listing.html">Listing</a>, <a href="/lister/view-my-listing-unit.html">Unit</a></h5>
+                            <h5>Submitted on 01-01-2021 00:00:00 by <a href="#">someuser</a></h5>
+                            <h5>Beginner's note</h5>
+                            <p class="text-main">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non ipsam impedit ut, harum dicta molestiae laudantium et
+                            totam doloribus molestias cum ducimus fuga. Sunt natus, iste consequuntur eaque officiis ad omnis voluptatem quasi,
+                            consequatur repudiandae similique, quis nemo eius. Reiciendis voluptates error numquam ipsam adipisci perferendis libero
+                            aspernatur excepturi eligendi beatae blanditiis asperiores earum, repellendus, sunt voluptatem illo corrupti praesentium
+                            debitis architecto autem unde, eaque enim fugit deleniti. Nobis repellendus aliquid perspiciatis, dolorum facilis earum
+                            asperiores quo rerum, quisquam rem facere quos voluptas consequuntur unde ipsum exercitationem ad! Ab delectus
+                            voluptates fuga amet quia blanditiis numquam. Dolores fugit atque at!</p>
+                            <a href="/lister/view-beginner-application.html">View application <i class="fas fa-chevron-right"></i></a>
+                        </div>
+                        <div class="item item-bottom-border">
+                            <h4>Application 0#</h4>
+                            <h5>Listing: <a href="/lister/view-my-listing.html">Listing</a>, <a href="/lister/view-my-listing-unit.html">Unit</a></h5>
+                            <h5>Submitted on 01-01-2021 00:00:00 by <a href="#">someuser2</a></h5>
+                            <h5>Beginner's note</h5>
+                            <p class="text-main">n/a</p>
+                            <a href="/lister/view-beginner-application.html">View application <i class="fas fa-chevron-right"></i></a>
                         </div>
                     </div>
                 </div>
