--- a/BeginnersPad v2/lister/view-beginner-applications.html
+++ b/BeginnersPad v2/lister/view-beginner-applications.html
@@ -61,7 +61,7 @@
         </div>
     </div>
 
-    <section class="section-read links" id="tickets-user-list">
+    <section class="section-read" id="tickets-user-list">
         <div class="container">
             <h3 class="section-title">Beginner applications</h3>
             <div class="panel-grp">
@@ -79,7 +79,10 @@
                             debitis architecto autem unde, eaque enim fugit deleniti. Nobis repellendus aliquid perspiciatis, dolorum facilis earum
                             asperiores quo rerum, quisquam rem facere quos voluptas consequuntur unde ipsum exercitationem ad! Ab delectus
                             voluptates fuga amet quia blanditiis numquam. Dolores fugit atque at!</p>
-                            <a href="/lister/view-beginner-application.html">View application <i class="fas fa-chevron-right"></i></a>
+                            <div class="btn-grp horizontal">
+                                <button>Approve</button>
+                                <button>Decline</button>
+                            </div>
                         </div>
                         <div class="item item-bottom-border">
                             <h4>Application 0#</h4>
@@ -87,7 +90,7 @@
                             <h5>Submitted on 01-01-2021 00:00:00 by <a href="#">someuser2</a></h5>
                             <h5>Beginner's note</h5>
                             <p class="text-main">n/a</p>
-                            <a href="/lister/view-beginner-application.html">View application <i class="fas fa-chevron-right"></i></a>
+                            <p class="text-beginner-application text-declined"><span>Declined</span> on 01-01-2021 00:00:00</p>
                         </div>
                         <div class="item item-bottom-border">
                             <h4>Application 0#</h4>
@@ -101,7 +104,7 @@
                             debitis architecto autem unde, eaque enim fugit deleniti. Nobis repellendus aliquid perspiciatis, dolorum facilis earum
                             asperiores quo rerum, quisquam rem facere quos voluptas consequuntur unde ipsum exercitationem ad! Ab delectus
                             voluptates fuga amet quia blanditiis numquam. Dolores fugit atque at!</p>
-                            <a href="/lister/view-beginner-application.html">View application <i class="fas fa-chevron-right"></i></a>
+                            <p class="text-beginner-application text-approved"><span>Approved</span> on 01-01-2021 00:00:00</p>
                         </div>
                         <div class="item item-bottom-border">
                             <h4>Application 0#</h4>
@@ -109,7 +112,10 @@
                             <h5>Submitted on 01-01-2021 00:00:00 by <a href="#">someuser2</a></h5>
                             <h5>Beginner's note</h5>
                             <p class="text-main">n/a</p>
-                            <a href="/lister/view-beginner-application.html">View application <i class="fas fa-chevron-right"></i></a>
+                            <div class="btn-grp horizontal">
+                                <button>Approve</button>
+                                <button>Decline</button>
+                            </div>
                         </div>
                     </div>
                 </div>
