--- a/BeginnersPad v2/lister/view-beginner-applications.html
+++ b/BeginnersPad v2/lister/view-beginner-applications.html
@@ -49,7 +49,7 @@
         <div class="nav-drawer-category">
             <p>Menu</p>
             <ul>
-                <li class="selected"><a href="/lister/dashboard.html">Dashboard</a></li>
+                <li><a href="/lister/dashboard.html">Dashboard</a></li>
                 <li><a href="/view-listings.html">Listings</a></li>
                 <li><a href="/lister/my-listings.html">My listings</a></li>
                 <li><a href="/lister/favourites.html">Favourites</a></li>
@@ -61,7 +61,7 @@
         </div>
     </div>
 
-    <section class="section-read" id="tickets-user-list">
+    <section class="section-read">
         <div class="container">
             <h3 class="section-title">Beginner applications</h3>
             <div class="panel-grp">
