Added styling for '/lister/view-property-applications.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/lister/view-property-applications.html
+++ b/BeginnersPad v2/lister/view-property-applications.html
@@ -75,25 +75,27 @@
         </div>
     </section>
 
-    <section class="section-listings" id="listerMyListings">
+    <section class="section-listings" id="sectionMyListings">
         <div class="container">
-            <div class="btn-grp horizontal">
-                <button class="selected">All</button>
-                <button>Not submitted</button>
-                <button>Pending</button>
-                <button>Approved</button>
-                <button>Rejected</button>
-                <button>Suspended</button>
-                <button>Hidden/Private</button>
-            </div>
-            <div class="btn-grp vertical">
-                <button class="selected">All</button>
-                <button>Not submitted</button>
-                <button>Pending</button>
-                <button>Approved</button>
-                <button>Rejected</button>
-                <button>Suspended</button>
-                <button>Hidden/Private</button>
+            <div class="top-buttons">
+                <div class="btn-grp horizontal">
+                    <button class="selected">All</button>
+                    <button>Not submitted</button>
+                    <button>Pending</button>
+                    <button>Approved</button>
+                    <button>Rejected</button>
+                    <button>Suspended</button>
+                    <button>Hidden/Private</button>
+                </div>
+                <div class="btn-grp vertical">
+                    <button class="selected">All</button>
+                    <button>Not submitted</button>
+                    <button>Pending</button>
+                    <button>Approved</button>
+                    <button>Rejected</button>
+                    <button>Suspended</button>
+                    <button>Hidden/Private</button>
+                </div>
             </div>
             <div class="container-btn-dropdown">
                 <select class="btn-dropdown" name="listing_sort" id="listing_sort">
