--- a/BeginnersPad v2/lister/my-listings.html
+++ b/BeginnersPad v2/lister/my-listings.html
@@ -51,7 +51,7 @@
             <ul>
                 <li><a href="/lister/dashboard.html">Dashboard</a></li>
                 <li><a href="/view-listings.html">Listings</a></li>
-                <li><a href="/lister/my-listings.html">My listings</a></li>
+                <li class="selected"><a href="/lister/my-listings.html">My listings</a></li>
                 <li><a href="/lister/favourites.html">Favourites</a></li>
                 <li><a href="/lister/view-beginner-applications.html">Beginner applications</a></li>
                 <li><a href="/lister/view-property-applications.html">My listing applications</a></li>
