--- a/BeginnersPad v2/lister/view-beginner-applications.html
+++ b/BeginnersPad v2/lister/view-beginner-applications.html
@@ -128,6 +128,8 @@
                             <button>Approved</button>
                             <button>Declined</button>
                         </div>
+                        <br>
+                        <a href="/lister/view-tour-appointments.html" class="btn btn-link">Tour appointments</a>
                     </div>
                 </div>
             </div>
