--- a/BeginnersPad v2/lister/view-tour-appointments.html
+++ b/BeginnersPad v2/lister/view-tour-appointments.html
@@ -53,7 +53,7 @@
                 <li><a href="/view-listings.html">Listings</a></li>
                 <li><a href="/lister/my-listings.html">My listings</a></li>
                 <li><a href="/lister/favourites.html">Favourites</a></li>
-                <li class="selected"><a href="/lister/view-beginner-applications.html">Beginner applications</a></li>
+                <li><a href="/lister/view-beginner-applications.html">Beginner applications</a></li>
                 <li><a href="/lister/view-property-applications.html">My listing applications</a></li>
                 <li><a href="/view-tickets-user.html">My tickets</a></li>
                 <li><a href="/lister/banned-users.html">Banned users</a></li>
